Changes implemented 1. Some logic in Main method changed 2. ShoppingCartServiceImpl changed 3. 1 more join added in query(ShoppingCartDaoImpl)